@@ -69,6 +69,16 @@ section: design
     </span>
 </div>
 <div class="flex flex-nowrap onmobile-flex-column mb1">
+    <label for="id_field_high" class="pm-label">
+        Highlight Form
+    </label>
+    <span class="pm-field-container">
+        <input type="text" id="id_field_high" class="pm-field pm-field--highlight strong w100 alignright" readonly value="This one is important" />
+    </span>
+</div>
+
+
+<div class="flex flex-nowrap onmobile-flex-column mb1">
     <label for="id_field6" class="pm-label">
         Alignment form
     </label>
