@@ -3,10 +3,12 @@
 ## New
 
 - added <code>--width-sidebar</code> and <code>--width-subnav</code> CSS variables
+- added `pm-field--highlight` modifier
 
 ## Updated/fixes
 
 - added state class `is-disabled` for buttons
+- increased tooltips size
 
 
 # [1.6.10] - 2019-05-23
